src/test/ui/const-generics/defaults/default-on-impl.stderr
error: defaults for const parameters are only allowed in `struct`, `enum`, `type`, or `trait` definitions
  --> $DIR/default-on-impl.rs:3:12
   |
LL | impl<const N: usize = 1> Foo<N> {}
   |            ^

error: aborting due to previous error

